<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ShuffleActivity">

    <TextView
        android:id="@+id/hello_text"
        android:text="@string/hello_world"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:id="@+id/separator_1"
        android:layout_width="fill_parent"
        android:layout_below="@+id/hello_text"
        android:layout_marginBottom="10dp"
        android:layout_height="5dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/cards_available_text"
        android:text="@string/cards_available"
        android:paddingBottom="10dp"
        android:layout_below="@+id/separator_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:id="@+id/separator_1a"
        android:layout_width="fill_parent"
        android:layout_below="@+id/cards_available_text"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:id="@+id/status_messages_layout"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_below="@id/separator_1a"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/status_messages_text"
            android:text="@string/status_messages_title"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:layout_below="@+id/separator_1a"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/status_messages"
            android:gravity="left"
            android:background="@color/Azure"
            android:scrollbars = "vertical"
            android:layout_below="@+id/status_messages_text"
            android:layout_height="match_parent"
            android:layout_width="fill_parent"
            android:maxLines="17"
            android:lines="17"
        >

        </TextView>
        <View
            android:id="@+id/separator_2"
            android:layout_width="fill_parent"
            android:layout_below="@+id/status_messages_text"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray"/>

        </LinearLayout>
    <LinearLayout
        android:id="@+id/buttons_linear_layout"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:layout_below="@+id/status_messages_layout"
        android:layout_width="fill_parent"
        android:layout_height="40dp">
        <Button
            android:id="@+id/deal_button"
            android:layout_width="140dp"
            android:onClick="onDealButtonClicked"
            android:background="@color/Cornsilk"
            android:text="@string/deal_button_title"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/shuffle_button"
            android:onClick="onShuffleButtonClicked"
            android:layout_width="140dp"
            android:background="@color/Bisque"
            android:text="@string/shuffle_button_title"
            android:layout_height="match_parent" />
    </LinearLayout>

</RelativeLayout>
